# getters-by-type-rs

./: Cargo.toml  README.md
src/: lib.rs
tests/: getters_by_type.rs
